@@ -3,6 +3,7 @@ Snes9x 1.56.2
   to cover the whole screen.                                (BearOso)
 - Adjusted IRQ timing slightly. Fixes Dragon Ball Z - Super
   Butouden 2.                                               (BearOso)
+- Clear WAI when IRQLine is active. Fixes Top Gear 3000.    (BearOso)
 - Fix reading the wrong tile data in mosaic drawing. Gets
   rid of glitch at top of FF6 battle transitions.           (BearOso)
 - Win32: Don't mix garbage into the last line with NTSC
